--- a/html/algorithm.html
+++ b/html/algorithm.html
@@ -6,14 +6,15 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Sigil Generator</title>
   <link rel="stylesheet" type="text/css" href = "/css/reset.css">
-  <link rel="stylesheet" type="text/css" media="screen" href="/css/algorithm.css">
+  <link rel="stylesheet" type="text/css" href="/css/algorithm.css">
 </head>
 
 <body>
   <div class="container">
-    <div class="split-left">
+    <div class="split left">
       <h1>Side 1</h1>
-    <div class="split-right">
+    </div>
+    <div class="split right">
       <h1>Side 2</h1>
     </div>
   </div>
