adding to styling

--- a/html/algorithm.html
+++ b/html/algorithm.html
@@ -18,6 +18,9 @@
       <h1>Side 2</h1>
     </div>
   </div>
+  <section id="canvas-container">
+    <canvas id="generator" width="600" height="600"></canvas>
+  </section>
 
 <script src = "/js/algorithm.js" type = "text/javascript"></script>
 </body>
