--- a/html/algorithm.html
+++ b/html/algorithm.html
@@ -18,8 +18,30 @@
       <h1>Side 2</h1>
     </div>
   </div>
-  <section id="canvas-container">
-    <canvas id="generator" width="600" height="600"></canvas>
+  <section id="generator-container">
+    <div id="input">
+      <form>
+        <label for="text=input">Enter a word</label>
+        <input type="text" id="" name="text-input">
+
+        <div id="mood">
+          <label for="color-option1">Mood</label>
+          <input type="radio" class="color" name="color-option1">
+
+          <label for="color-option2">Mood</label>
+          <input type="radio" class="color" name="color-option2">
+
+          <label for="color-option2">Mood</label>
+          <input type="radio" class="color" name="color-option2">
+
+          <label for="color-option3">Mood</label>
+          <input type="radio" class="color" name="color-option3">
+       </div>
+       <input type="submit" id="submit" value="generate">
+        
+    </form>
+    </div>
+    <canvas id="generator" width="400" height="500"></canvas>
   </section>
 
 <script src = "/js/algorithm.js" type = "text/javascript"></script>
