--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
         <h1>Welcome to Sigils R' Us</h1>
-    <nav><form action="gallery.html">
-            <input type="submit" value="Gallery" />
-        </form>
-        <form action="algrothim.html">
-            <input type="submit" value="Get Started" />
-        </form></nav>
+        <nav>
+            <ul>
+                <li><a href="/html/gallery.html">Gallery</a></li>
+                <li><a href="/html/algorithm.html">Generator</a></li>
+            </ul>
+        </nav>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam tempus dolor mauris, sit amet porttitor orci ornare at. Pellentesque blandit elit sit amet porta lacinia. Sed eu maximus turpis. Vestibulum non tellus eget odio fringilla lacinia vel nec ex. Aenean sodales vitae nibh et cursus. Proin suscipit consectetur erat ornare ornare. Morbi ac purus nunc. Mauris scelerisque nulla tortor, sed lobortis augue vulputate nec. Mauris vel dictum sem, non molestie neque.</p>
     <ul>
         <h3>
