working through bugs, line 84

--- a/html/algorithm.html
+++ b/html/algorithm.html
@@ -20,8 +20,8 @@
     </div>
   <section id="generator-container">
       <form id="form">
-        <label for="text=input">Enter a word</label>
-        <input type="text" id="" name="text-input">
+        <label for="text-input">Enter a word</label>
+        <input type="text" id="the_word" name="text-input">
 
         <div id="mood">
           <label for="color-option1">Mood</label>
