--- a/html/gallery.html
+++ b/html/gallery.html
@@ -5,8 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="../css/gallery.css">
 </head>
 <body>
-   <img src="../img/img-test.jpg">
+   <h1>About The Developers</h1>
+   <p>
+       <img src="../img/img-test.jpg">
+    Parris W
+</p>
+<p>
+    <img src="../img/Notes_190222_164644_d1c_1.jpg">
+    Merry C
+</p>
+<p>
+    <img src="../img/Notes_190222_164706_b95_1.jpg">
+    Bonnie W
+</p>
+<p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer pharetra est vel lacus volutpat laoreet. Vivamus blandit tincidunt feugiat. Morbi sit amet blandit eros. Donec ac sem imperdiet ante dapibus cursus. Suspendisse vitae lorem metus. Praesent metus lorem, ullamcorper vel lectus eu, luctus maximus arcu. Vestibulum gravida libero a vestibulum volutpat.
+</p>
+<div class="scrollmenu">
+        <img src="../img/img-test.jpg">  
+</div>
+<section id="revisit"></section>
 </body>
 </html>
