local storage tests

--- a/html/gallery.html
+++ b/html/gallery.html
@@ -25,8 +25,12 @@
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer pharetra est vel lacus volutpat laoreet. Vivamus blandit tincidunt feugiat. Morbi sit amet blandit eros. Donec ac sem imperdiet ante dapibus cursus. Suspendisse vitae lorem metus. Praesent metus lorem, ullamcorper vel lectus eu, luctus maximus arcu. Vestibulum gravida libero a vestibulum volutpat.
 </p>
 <div class="scrollmenu">
-        <img src="../img/img-test.jpg">  
+      
+<section>
+    <img id="right-arrow" src="">
+    <canvas id="generator" width="400" height="500"></canvas>
+</section>
 </div>
-<section id="revisit"></section>
+<script src="../js/gallery.js"></script>
 </body>
 </html>
