--- a/html/algorithm.html
+++ b/html/algorithm.html
@@ -41,6 +41,7 @@
        <input type="submit" id="submit" value="generate">  
       </form>
     <canvas id="generator" width="400" height="500"></canvas>
+    <button type="button" id="save">Save</button>
   </section>
 </div>
 
