--- a/html/gallery.html
+++ b/html/gallery.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="../css/gallery.css">
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href = "/html/algorithm.html">Generator</a></li>
+        </ul>
+    </nav>
    <h1>About The Developers</h1>
    <p>
        <img src="../img/img-test.jpg">
@@ -25,8 +30,8 @@
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer pharetra est vel lacus volutpat laoreet. Vivamus blandit tincidunt feugiat. Morbi sit amet blandit eros. Donec ac sem imperdiet ante dapibus cursus. Suspendisse vitae lorem metus. Praesent metus lorem, ullamcorper vel lectus eu, luctus maximus arcu. Vestibulum gravida libero a vestibulum volutpat.
 </p>
 <div class="scrollmenu">
-    <img id="test" src="" width="300" height="300">
-    <canvas id="generator" width="0" height="0"></canvas>
+    <!-- <img id="test" src="" width="300" height="300"> -->
+    <!-- <canvas id="generator" width="0" height="0"></canvas> -->
 </div>
 <script src="../js/gallery.js"></script>
 </body>
