--- a/html/gallery.html
+++ b/html/gallery.html
@@ -6,32 +6,37 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="../css/gallery.css">
+    <link rel="stylesheet" href="../css/reset.css">
 </head>
 <body>
     <nav>
         <ul>
             <li><a href = "/html/algorithm.html">Generator</a></li>
+            <li><a href = "/index.html">Home</a></li>
         </ul>
     </nav>
    <h1>About The Developers</h1>
-   <p>
-       <img src="../img/img-test.jpg">
+   <div id="aboutus">
+   <ul></ul>
+       <img src="../img/parris.jpg">
     Parris W
-</p>
-<p>
-    <img src="../img/Notes_190222_164644_d1c_1.jpg">
+   </h2>
+   <h2>
+    <img src="../img/merry.jpg">
     Merry C
-</p>
-<p>
-    <img src="../img/Notes_190222_164706_b95_1.jpg">
+   </h2>
+   <h2>
+    <img src="../img/bonnie.jpg">
     Bonnie W
-</p>
-<p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer pharetra est vel lacus volutpat laoreet. Vivamus blandit tincidunt feugiat. Morbi sit amet blandit eros. Donec ac sem imperdiet ante dapibus cursus. Suspendisse vitae lorem metus. Praesent metus lorem, ullamcorper vel lectus eu, luctus maximus arcu. Vestibulum gravida libero a vestibulum volutpat.
-</p>
+   </h2>
+</div>
+<div id="maintext">
+    <p>  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer pharetra est vel lacus volutpat laoreet. Vivamus blandit tincidunt feugiat. Morbi sit amet blandit eros. Donec ac sem imperdiet ante dapibus cursus. Suspendisse vitae lorem metus. Praesent metus lorem, ullamcorper vel lectus eu, luctus maximus arcu. Vestibulum gravida libero a vestibulum volutpat.
+
+    </p>
+</div>
 <div id="scrollmenu">
-    <!-- <img id="test" src="" width="300" height="300"> -->
-    <!-- <canvas id="generator" width="0" height="0"></canvas> -->
+ 
 </div>
 <script src="../js/gallery.js"></script>
 </body>
