--- a/html/gallery.html
+++ b/html/gallery.html
@@ -17,18 +17,20 @@
     </nav>
    <h1>About The Developers</h1>
    <div id="aboutus">
-   <ul></ul>
+   <ul>
+       <li>
        <img src="../img/parris.jpg">
-    Parris W
-   </h2>
-   <h2>
+    <p>Parris W(He/Him)</p>
+        </li>
+        <li>
     <img src="../img/merry.jpg">
-    Merry C
-   </h2>
-   <h2>
+    <p>Merry C(They/Them)</p>
+        </li>
+        <li>
     <img src="../img/bonnie.jpg">
-    Bonnie W
-   </h2>
+    <p>Bonnie W(She/Her)</p>
+        </li>
+   </ul>
 </div>
 <div id="maintext">
     <p>  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer pharetra est vel lacus volutpat laoreet. Vivamus blandit tincidunt feugiat. Morbi sit amet blandit eros. Donec ac sem imperdiet ante dapibus cursus. Suspendisse vitae lorem metus. Praesent metus lorem, ullamcorper vel lectus eu, luctus maximus arcu. Vestibulum gravida libero a vestibulum volutpat.
