--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <ul>
                 <li><a href="/html/gallery.html">Gallery</a></li>
                 <li><a href="/html/algorithm.html">Generator</a></li>
+                <li><a href = "/html/about_us.html">About Us</a></li>
             </ul>
         </nav>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam tempus dolor mauris, sit amet porttitor orci ornare at. Pellentesque blandit elit sit amet porta lacinia. Sed eu maximus turpis. Vestibulum non tellus eget odio fringilla lacinia vel nec ex. Aenean sodales vitae nibh et cursus. Proin suscipit consectetur erat ornare ornare. Morbi ac purus nunc. Mauris scelerisque nulla tortor, sed lobortis augue vulputate nec. Mauris vel dictum sem, non molestie neque.</p>
