--- a/html/algorithm.html
+++ b/html/algorithm.html
@@ -25,6 +25,7 @@
         <ul>
           <li><a href="../html/gallery.html">Gallery</a></li>
           <li><a href="/index.html">Home</a></li>
+          <li><a href = "../html/about_us.html">About Us</a></li>
         </ul>
     </nav>
   <section id="generator-container">
