--- a/html/algorithm.html
+++ b/html/algorithm.html
@@ -23,15 +23,15 @@
     </div>
     <nav>
         <ul>
-          <li><a href="../html/gallery.html">Gallery</a></li>
           <li><a href="/index.html">Home</a></li>
+          <li><a href="../html/gallery.html">Gallery</a></li>
           <li><a href = "../html/about_us.html">About Us</a></li>
         </ul>
     </nav>
   <section id="generator-container">
       <form id="form">
         
-        <input type="text" id="text-input" name="text-input" placeholder="Enter a word.">
+        <input type="text" id="text-input" name="text-input" placeholder="Enter a word or phrase">
 
         <div id="mood">
           <input type="radio" id="happy" name="color" value="happy">
@@ -49,7 +49,7 @@
        <input type="submit" id="submit" value="generate">  
       </form>
     <canvas id="generator" width="400" height="500"></canvas>
-    <button type="button" id="save">Save</button>
+    <button type="button" id="save">Save to gallery</button>
 
 
   </section>
