--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Sigils R' Us</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/general.css">
     <link rel="stylesheet" href="css/style.css">
+   
 </head>
 <body>
         <h1>Welcome to Sigils R' Us</h1>
@@ -17,19 +20,18 @@
             </ul>
         </nav>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam tempus dolor mauris, sit amet porttitor orci ornare at. Pellentesque blandit elit sit amet porta lacinia. Sed eu maximus turpis. Vestibulum non tellus eget odio fringilla lacinia vel nec ex. Aenean sodales vitae nibh et cursus. Proin suscipit consectetur erat ornare ornare. Morbi ac purus nunc. Mauris scelerisque nulla tortor, sed lobortis augue vulputate nec. Mauris vel dictum sem, non molestie neque.</p>
+    <h3>What these could be used for:</h3>
     <ul>
-        <h3>
-        <p>What these could be used for:</p>
-        </h3>
-        <ol>list item 1</ol>
-        <ol>list item 2</ol>
-        <ol>list item 3</ol>
-        <ol>list item 4</ol>
-        <ol>list item 5</ol>
+        <li>list item 1</li>
+        <li>list item 2</li>
+        <li>list item 3</li>
+        <li>list item 4</li>
+        <li>list item 5</li>
     </ul>
     <img src="img/Notes_190222_164612_90b_1.jpg">
     <img src="img/Notes_190222_164644_d1c_1.jpg">
     <img src="img/Notes_190222_164706_b95_1.jpg">
+
    <script src="index.js"></script>
 
 </body>
