styling index.html

--- a/html/about_us.html
+++ b/html/about_us.html
@@ -7,6 +7,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/about_us.css">
+    <link href="https://fonts.googleapis.com/css?family=Srisakdi" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Arima+Madurai:100" rel="stylesheet">
+   
     
 </head>
 <body>
@@ -29,7 +32,7 @@
     <p>Merry C(They/Them)</p>
         </li>
         <li>
-    <img src="../img/bonnie.jpg">
+    <img src="../img/bonnie.png">
     <p>Bonnie W(She/Her)</p>
         </li>
    </ul>
