--- a/index.html
+++ b/index.html
@@ -8,31 +8,47 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/general.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Srisakdi" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Arima+Madurai:100" rel="stylesheet">
    
 </head>
 <body>
+    <div id="header">
         <h1>Welcome to Sigils R' Us</h1>
         <nav>
             <ul>
-                <li><a href="/html/gallery.html">Gallery</a></li>
-                <li><a href="/html/algorithm.html">Generator</a></li>
-                <li><a href = "/html/about_us.html">About Us</a></li>
+                <li><a href="/html/algorithm.html"><button>Generator</button></a></li>
+                <li><a href="/html/gallery.html"><button>Gallery</button></a></li>
+                <li><a href = "/html/about_us.html"><button>About Us</button></a></li>
             </ul>
         </nav>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam tempus dolor mauris, sit amet porttitor orci ornare at. Pellentesque blandit elit sit amet porta lacinia. Sed eu maximus turpis. Vestibulum non tellus eget odio fringilla lacinia vel nec ex. Aenean sodales vitae nibh et cursus. Proin suscipit consectetur erat ornare ornare. Morbi ac purus nunc. Mauris scelerisque nulla tortor, sed lobortis augue vulputate nec. Mauris vel dictum sem, non molestie neque.</p>
-    <h3>What these could be used for:</h3>
-    <ul>
-        <li>list item 1</li>
-        <li>list item 2</li>
-        <li>list item 3</li>
-        <li>list item 4</li>
-        <li>list item 5</li>
-    </ul>
-    <img src="img/Notes_190222_164612_90b_1.jpg">
-    <img src="img/Notes_190222_164644_d1c_1.jpg">
-    <img src="img/Notes_190222_164706_b95_1.jpg">
+    </div>
+    <div class="container">
+        <h3>Click on sigil to begin</h3>
+        <a href="html/algorithm.html"><img src="img/sigil.png" alt="sigl" id="sigil-pic"></a>
+        <p id="main">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam tempus dolor mauris, sit amet porttitor orci ornare at. Pellentesque blandit elit sit amet porta lacinia. Sed eu maximus turpis. Vestibulum non tellus eget odio fringilla lacinia vel nec ex. Aenean sodales vitae nibh et cursus. Proin suscipit consectetur erat ornare ornare. Morbi ac purus nunc. Mauris scelerisque nulla tortor, sed lobortis augue vulputate nec. Mauris vel dictum sem, non molestie neque.</p>
+    </div>
 
-   <script src="index.js"></script>
+    <h2>Types of sigils</h2>
+    <div class="sigil-info">  
+        <section>
+            <h3>Type 1</h3>
+            <img src="/img/dark.jpg" alt="" id="img_one">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat repellendus fugiat totam aspernatur ipsum dolor ab aliquid nulla adipisci non eos iure magnam rem, odit beatae. Dicta explicabo voluptatibus commodi tempora eligendi aperiam ducimus ipsa aspernatur quasi! Quae totam molestiae provident non maxime? </p>
+        </section>
+        <section>
+            <h3> Type2</h3>
+            <img src="/img/dark.jpg" alt="" id="img_two">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat repellendus fugiat totam aspernatur ipsum dolor ab aliquid nulla adipisci non eos iure magnam rem, odit beatae. Dicta explicabo voluptatibus commodi tempora eligendi aperiam ducimus ipsa aspernatur quasi! Quae totam molestiae provident non maxime? </p>
+        </section>
+            <section>
+            <h3>Type3</h3>
+            <img src="/img/dark.jpg" alt="">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat repellendus fugiat totam aspernatur ipsum dolor ab aliquid nulla adipisci non eos iure magnam rem, odit beatae. Dicta explicabo voluptatibus commodi tempora eligendi aperiam ducimus ipsa aspernatur quasi! Quae totam molestiae provident non maxime? </p>
+        </section>
+    </div>
+    
+    
 
 </body>
 </html>
