--- a/html/gallery.html
+++ b/html/gallery.html
@@ -6,31 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/general.css">
     <link rel="stylesheet" href="../css/gallery.css">
+    <link href="https://fonts.googleapis.com/css?family=Srisakdi" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Arima+Madurai:100" rel="stylesheet">
     
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href = "/html/algorithm.html">Generator</a></li>
-            <li><a href = "/index.html">Home</a></li>
-            <li><a href = "../html/about_us.html">About Us</a></li>
-        </ul>
-    </nav>
-   
-</div>
-<div id="maintext">
-    <p>  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer pharetra est vel lacus volutpat laoreet. Vivamus blandit tincidunt feugiat. Morbi sit amet blandit eros. Donec ac sem imperdiet ante dapibus cursus. Suspendisse vitae lorem metus. Praesent metus lorem, ullamcorper vel lectus eu, luctus maximus arcu. Vestibulum gravida libero a vestibulum volutpat.
+    <div id="header">
+        <h1>Gallery</h1>
+        <nav>
+            <ul>
+                <li><a href = "/html/algorithm.html"><button>Generator</button></a></li>
+                <li><a href = "/index.html"><button>Home</button></a></li>
+                <li><a href = "../html/about_us.html"><button>About Us</button></a></li>
+            </ul>
+        </nav>
+    </div>                              
 
-    </p>
-</div>
-<div id="title">
-    <p>Already Generated</p>
-</div>
-<div id="scrollmenu">
+<section>
+    <h2>Saved Sigils</h2>
+    <div id="scrollmenu">
+</section>
 
  
-</div>
 <script src="../js/gallery.js"></script>
 </body>
 </html>
