--- a/html/gallery.html
+++ b/html/gallery.html
@@ -17,17 +17,58 @@
         <h1>Gallery</h1>
         <nav>
             <ul>
-                <li><a href = "/html/algorithm.html"><button>Generator</button></a></li>
                 <li><a href = "/index.html"><button>Home</button></a></li>
+                <li><a href = "/html/algorithm.html"><button>Generator</button></a></li>
                 <li><a href = "../html/about_us.html"><button>About Us</button></a></li>
             </ul>
         </nav>
-    </div>                              
-
-<section>
+    </div>   
+<section id="static">
+    <h2>Sigils from the site</h2>
+    <div id="scroll">
+        <section>
+            <h2>CODE FELLOWS</h2>
+            <img src="/img/codefellows.png" alt="codfellows-sigil">
+        </section>
+        <section>
+            <h2>LOVE</h2>
+            <img src="/img/love.png" alt="codfellows-sigil">
+        </section>
+        <section>
+            <h2>HELLO</h2>
+            <img src="/img/hello.png" alt="codfellows-sigil">
+        </section>
+        <section>
+            <h2>MEMORY</h2>
+            <img src="/img/memory.png" alt="codfellows-sigil">
+        </section>
+        <section>
+            <h2>LIFE</h2>
+            <img src="/img/life.png" alt="codfellows-sigil">
+        </section>
+        <section>
+            <h2>SMILE</h2>
+            <img src="/img/smile.png" alt="codfellows-sigil">
+        </section>
+        <section>
+            <h2>HOPE</h2>
+            <img src="/img/hope.png" alt="codfellows-sigil">
+        </section>
+        <section>
+            <h2>SUNSHINE</h2>
+            <img src="/img/sunshine.png" alt="codfellows-sigil">
+        </section>
+        <section>
+            <h2>CODE</h2>
+            <img src="/img/code.png" alt="codfellows-sigil">
+        </section>
+</section>
+    
+<section id="saved">
     <h2>Saved Sigils</h2>
     <div id="scrollmenu">
 </section>
+
 
  
 <script src="../js/gallery.js"></script>
