--- a/index.html
+++ b/index.html
@@ -26,25 +26,25 @@
     <div class="container">
         <h3>Click on sigil to begin</h3>
         <a href="html/algorithm.html"><img src="img/sigil.png" alt="sigl" id="sigil-pic"></a>
-        <p id="main">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam tempus dolor mauris, sit amet porttitor orci ornare at. Pellentesque blandit elit sit amet porta lacinia. Sed eu maximus turpis. Vestibulum non tellus eget odio fringilla lacinia vel nec ex. Aenean sodales vitae nibh et cursus. Proin suscipit consectetur erat ornare ornare. Morbi ac purus nunc. Mauris scelerisque nulla tortor, sed lobortis augue vulputate nec. Mauris vel dictum sem, non molestie neque.</p>
+        <p id="main">Sigils are powerful tools for meditation, asserting your intentions, and magick. They draw meaning from the intent and work you put into their creation. While there are as many ways to creat sigils as there are sigil users, the basic principal is that you create a shape that takes on your intention as its meaning. Then, whenever the sigil is used, activated, or seen </p>
     </div>
 
-    <h2>Types of sigils</h2>
+    <h2>Primay Inspirations</h2>
     <div class="sigil-info">  
         <section>
-            <h3>Type 1</h3>
+            <h3>Chaos Magick</h3>
             <img src="/img/dark.jpg" alt="" id="img_one">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat repellendus fugiat totam aspernatur ipsum dolor ab aliquid nulla adipisci non eos iure magnam rem, odit beatae. Dicta explicabo voluptatibus commodi tempora eligendi aperiam ducimus ipsa aspernatur quasi! Quae totam molestiae provident non maxime? </p>
+            <p>Chaos Macigicians have popularized a method of sigil crafting based on the work of the artist Austin Osman Spare. In this widespread method, one takes a word or phrase and eliminates all of the vowels and duplicate letters. Then, one crafts the remaining letters into a cohesive symbol that becomes the sigil.  </p>
         </section>
         <section>
-            <h3> Type2</h3>
+            <h3> Sigil Witchery</h3>
             <img src="/img/dark.jpg" alt="" id="img_two">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat repellendus fugiat totam aspernatur ipsum dolor ab aliquid nulla adipisci non eos iure magnam rem, odit beatae. Dicta explicabo voluptatibus commodi tempora eligendi aperiam ducimus ipsa aspernatur quasi! Quae totam molestiae provident non maxime? </p>
+            <p>Sigil Witchery, for lack of a better name, is the very personal method of creating sigils detailed by Laura Tempest Zakroff in her book of the same title. This practice involves cultivating a personal symbolic library, fully understanding the problem you are trying to tackle and breaking it down in to component parts, and then applying those symbols to a design intended to connect to those components.  </p>
         </section>
             <section>
-            <h3>Type3</h3>
-            <img src="/img/dark.jpg" alt="">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat repellendus fugiat totam aspernatur ipsum dolor ab aliquid nulla adipisci non eos iure magnam rem, odit beatae. Dicta explicabo voluptatibus commodi tempora eligendi aperiam ducimus ipsa aspernatur quasi! Quae totam molestiae provident non maxime? </p>
+            <h3>Kamea: Magic Square Sigils</h3>
+            <img src="/img/dark.jpg" alt="img_three">
+            <p> Kamea sigils make use of magical squares, specifically the seven planatary squares. Once you have a word or short phrase that fits your </p>
         </section>
     </div>
     
