--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
     <div class="sigil-info">  
         <section>
             <h3>Chaos Magick</h3>
-            <img src="/img/dark.jpg" alt="" id="img_one">
+            <img src="/img/chaos.JPG" alt="" id="img_one">
             <p>Chaos Magicians have popularized a method of sigil crafting based on the work of the artist Austin Osman Spare. In this widespread method, one takes a word or phrase and eliminates all of the vowels and duplicate letters. Then, one crafts the remaining letters into a cohesive symbol that becomes the sigil.  </p>
         </section>
         <section>
             <h3> Sigil Witchery</h3>
-            <img src="/img/dark.jpg" alt="" id="img_two">
+            <img src="/img/witch-sigil.JPG" alt="" id="img_two">
             <p>Sigil Witchery, for lack of a better name, is the very personal method of creating sigils detailed by Laura Tempest Zakroff in her book of the same title. This practice involves cultivating a personal symbolic library, fully understanding the problem you are trying to tackle, breaking it down in to component parts, and then applying those symbols to a design intended to connect to those components.  </p>
         </section>
             <section>
