styled about us page

--- a/html/about_us.html
+++ b/html/about_us.html
@@ -27,23 +27,27 @@
     
    <div id="aboutus">
    <ul>
+       <section>
        <li>
-       <img src="../img/parris.jpg">
-    <p>Parris W(He/Him)</p>
+       <p><img src="../img/parris.jpg"><br>
+    Parris W(He/Him)<br>Parris was born in Erie, PA. He moved around a little but mostly stayed there.<br>At the age of 21 he moved to Washington in search of new begginings.<br>In his free time he enjoys playing video games with his friends back home, hanging out with his brother who he lives with, and laughing whenever possible.</p>
         </li>
+        </section>
+        <section>
         <li>
-    <img src="../img/merry.jpg">
-    <p>Merry C(They/Them)</p>
+    <p><img src="../img/merry.jpg"><br>
+    Merry C(They/Them)<br>Merry is a queer artist, witch, and a developer.<br> They are originally from the Midwest, but currently lives in WA.<br> In their free they enjoy reading comics, collecting art, and being a lovely Lolita</p>
         </li>
+        </section>
+        <section>
         <li>
-    <img src="../img/bonnie.png">
-    <p>Bonnie W(She/Her)</p>
+    <p><img src="../img/bonnie.png"><br>
+    Bonnie W(She/Her)<br>Bonnie is a music and computer nerd from Texas who currently works as a music instructor and intern developer at AWSOM in Seattle.<br> Her hobbies include snowboarding, painting, and doing obstacle runs.</p>
         </li>
+        </section>
    </ul>
     </div>
     <div id="maintext">
-        <p>  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer pharetra est vel lacus volutpat laoreet. Vivamus blandit tincidunt feugiat. Morbi sit amet blandit eros. Donec ac sem imperdiet ante dapibus cursus. Suspendisse vitae lorem metus. Praesent metus lorem, ullamcorper vel lectus eu, luctus maximus arcu. Vestibulum gravida libero a vestibulum volutpat.
-        </p>
     </div>
     <div id="source">
         <p>Sources:<br>Zakroff, Laura Tempest. Sigil Witchery: A Witch’s Guide to Crafting Magick Symbols. Woodbury, MN: Llewellyn Publications, 2018.<br>Zakroff, Laura Tempest. Sigil Witchery: A Witch’s Guide to Crafting Magick Symbols. Woodbury, MN: Llewellyn Publications, 2018.<br>Zakroff, Laura Tempest. Sigil Witchery: A Witch’s Guide to Crafting Magick Symbols. Woodbury, MN: Llewellyn Publications, 2018.<br>Zakroff, Laura Tempest. Sigil Witchery: A Witch’s Guide to Crafting Magick Symbols. Woodbury, MN: Llewellyn Publications, 2018.<br>Zakroff, Laura Tempest. Sigil Witchery: A Witch’s Guide to Crafting Magick Symbols. Woodbury, MN: Llewellyn Publications, 2018.</p>
