finishing styling again

--- a/html/gallery.html
+++ b/html/gallery.html
@@ -26,41 +26,37 @@
 <section id="static">
     <h2>Sigils from the site</h2>
     <div id="scroll">
-        <section>
-            <h2>CODE FELLOWS</h2>
-            <img src="/img/codefellows.png" alt="codfellows-sigil">
+         <section>
+            <h2>MY CODE IS BUG FREE</h2>
+            <img src="/img/mycodeisbugfree.png" alt="codfellows-sigil">
         </section>
         <section>
             <h2>LOVE</h2>
             <img src="/img/love.png" alt="codfellows-sigil">
         </section>
         <section>
-            <h2>HELLO</h2>
-            <img src="/img/hello.png" alt="codfellows-sigil">
+            <h2>PEACE</h2>
+            <img src="/img/peace.png" alt="codfellows-sigil">
         </section>
         <section>
-            <h2>MEMORY</h2>
-            <img src="/img/memory.png" alt="codfellows-sigil">
-        </section>
-        <section>
-            <h2>LIFE</h2>
-            <img src="/img/life.png" alt="codfellows-sigil">
-        </section>
-        <section>
-            <h2>SMILE</h2>
-            <img src="/img/smile.png" alt="codfellows-sigil">
-        </section>
-        <section>
-            <h2>HOPE</h2>
-            <img src="/img/hope.png" alt="codfellows-sigil">
+            <h2>SIGILICIOUS</h2>
+            <img src="/img/sigilicious.png" alt="codfellows-sigil">
         </section>
         <section>
             <h2>SUNSHINE</h2>
             <img src="/img/sunshine.png" alt="codfellows-sigil">
         </section>
         <section>
-            <h2>CODE</h2>
-            <img src="/img/code.png" alt="codfellows-sigil">
+            <h2>BRUH</h2>
+            <img src="/img/bruh.png" alt="codfellows-sigil">
+        </section>
+        <section>
+            <h2>ACP</h2>
+            <img src="/img/acp.png" alt="codfellows-sigil">
+        </section>
+        <section>
+            <h2>CREATIVITY</h2>
+            <img src="/img/creativity.png" alt="codfellows-sigil">
         </section>
 </section>
     
