--- a/html/about_us.html
+++ b/html/about_us.html
@@ -11,7 +11,10 @@
     <link href="https://fonts.googleapis.com/css?family=Arima+Madurai:100" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Aguafina+Script|Almendra+Display|Amatic+SC|Amita|Arizonia|Astloch|Averia+Serif+Libre:300|Berkshire+Swash|Bigelow+Rules|Elsie|Fondamento|Forum|Kristi|Lovers+Quarrel|Meddon|Metamorphous|Milonga|Miss+Fajardose|Modern+Antiqua|Mr+Bedfort|Over+the+Rainbow|Overlock+SC|Overlock:400i|Princess+Sofia|Ruthie|Tangerine|Vampiro+One|Zeyada" rel="stylesheet">
-   
+    <link href="https://fonts.googleapis.com/css?family=Forum" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Forum" rel="stylesheet">
+
+
     
 </head>
 <body>
