--- a/html/algorithm.html
+++ b/html/algorithm.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" type="text/css" href="/css/algorithm.css">
   <link href="https://fonts.googleapis.com/css?family=Srisakdi" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Arima+Madurai:100" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Forum" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Astloch" rel="stylesheet">
   <script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
