--- a/html/gallery.html
+++ b/html/gallery.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../css/gallery.css">
     <link href="https://fonts.googleapis.com/css?family=Srisakdi" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Arima+Madurai:100" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Forum" rel="stylesheet"><link href="https://fonts.googleapis.com/css?family=Astloch" rel="stylesheet">
     
 </head>
 <body>
