--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Sigils R' Us</title>
+    <title> Sigilicious </title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/general.css">
     <link rel="stylesheet" href="css/style.css">
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div id="header">
-        <h1>Welcome to Sigils R' Us</h1>
+        <h1> Sigilicious <h1>
         <nav>
             <ul>
                 <li><a href="/html/algorithm.html"><button>Generator</button></a></li>
