--- a/html/about_us.html
+++ b/html/about_us.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title> Sigilicious <title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/about_us.css">
     <link href="https://fonts.googleapis.com/css?family=Srisakdi" rel="stylesheet">
