--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div id="header">
-        <h1> Sigilicious <h1>
+        <h1> Sigils R Us <h1>
         <nav>
             <ul>
                 <li><a href="/html/algorithm.html"><button>Generator</button></a></li>
